[release-06-11-2025]: added invoice api
